syntax = "proto3";

package tomshop.v1;

message Order {
    int64 productID = 1;
    int64 quantity = 2;
}

message OrderRequest {
    repeated Order purchases = 1;
}

message OrderResponse {
    bool successful = 1;
}

service TomShop {
    rpc MakeOrder(OrderRequest) returns (OrderResponse);
}